# streampi

./: CLAUDE.md  README.md  cli.py  config.json  config_sample.json  main.py  pyproject.toml  requirments.txt
plugins/: __init__.py  bright_plugin.py  btc_plugin.py  clock_plugin.py  dingtalk_plugin.py  dummy_plugin.py  gold_plugin.py  next_page_plugin.py  plugin.py  serpapi_plugin.py  streamdeck.py  tailscale_plugin.py  uptime_plugin.py
routers/: streamdeck.py
